--- a/neighborhood.html
+++ b/neighborhood.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <title>Neighborhood Walk</title>
   <link rel="stylesheet" href="./style.css">
+  <link rel="icon" href="./images/u-m_logo-hex.png" type="image/png">
   <!-- You will need to link to the CSS file -->
 </head>
 
